parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    FUNCTION
    INTERVAL
    LBRACKET
    RBRACKET

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM IDENT SEMICOLON outblock PERIOD
Rule 2     outblock -> var_decl_part act_set_varscope_local subprog_decl_part outblock_act act_set_varscope_global statement
Rule 3     outblock_act -> <empty>
Rule 4     var_decl_part -> var_decl_list SEMICOLON
Rule 5     var_decl_part -> <empty>
Rule 6     var_decl_list -> var_decl_list SEMICOLON var_decl
Rule 7     var_decl_list -> var_decl
Rule 8     var_decl -> VAR id_list
Rule 9     subprog_decl_part -> subprog_decl_list SEMICOLON
Rule 10    subprog_decl_part -> <empty>
Rule 11    subprog_decl_list -> subprog_decl_list SEMICOLON subprog_decl
Rule 12    subprog_decl_list -> subprog_decl
Rule 13    subprog_decl -> proc_decl
Rule 14    proc_decl -> PROCEDURE proc_name SEMICOLON inblock
Rule 15    proc_name -> IDENT act_insert_prev_proc_ident
Rule 16    inblock -> var_decl_part statement
Rule 17    statement_list -> statement_list SEMICOLON statement
Rule 18    statement_list -> statement
Rule 19    statement -> assignment_statement
Rule 20    statement -> if_statement
Rule 21    statement -> while_statement
Rule 22    statement -> for_statement
Rule 23    statement -> proc_call_statement
Rule 24    statement -> null_statement
Rule 25    statement -> block_statement
Rule 26    statement -> read_statement
Rule 27    statement -> write_statement
Rule 28    assignment_statement -> IDENT act_lookup_prev_ident ASSIGN expression
Rule 29    if_statement -> act_generate_labels IF condition act_insert_br THEN act_insert_label1 statement act_insert_jump3 act_insert_label2 else_statement act_insert_jump3 act_insert_label3
Rule 30    act_generate_labels -> <empty>
Rule 31    act_insert_br -> <empty>
Rule 32    act_insert_label1 -> <empty>
Rule 33    act_insert_label2 -> <empty>
Rule 34    act_insert_label3 -> <empty>
Rule 35    act_insert_jump1 -> <empty>
Rule 36    act_insert_jump2 -> <empty>
Rule 37    act_insert_jump3 -> <empty>
Rule 38    else_statement -> ELSE statement
Rule 39    else_statement -> <empty>
Rule 40    while_statement -> WHILE act_generate_labels act_insert_jump1 act_insert_label1 condition act_insert_br_while DO act_insert_label2 statement act_insert_jump1 act_insert_label3
Rule 41    act_insert_br_while -> <empty>
Rule 42    for_statement -> FOR IDENT act_lookup_prev_ident ASSIGN expression TO expression DO statement
Rule 43    proc_call_statement -> proc_call_name
Rule 44    proc_call_name -> IDENT act_lookup_prev_ident
Rule 45    block_statement -> BEGIN statement_list END
Rule 46    read_statement -> READ LPAREN IDENT act_lookup_prev_ident RPAREN
Rule 47    write_statement -> WRITE LPAREN expression RPAREN
Rule 48    null_statement -> <empty>
Rule 49    condition -> expression EQ expression
Rule 50    condition -> expression NEQ expression
Rule 51    condition -> expression LT expression
Rule 52    condition -> expression LE expression
Rule 53    condition -> expression GT expression
Rule 54    condition -> expression GE expression
Rule 55    expression -> term
Rule 56    expression -> MINUS term
Rule 57    expression -> expression PLUS term
Rule 58    expression -> expression MINUS term
Rule 59    term -> f_actor
Rule 60    term -> term MULT f_actor
Rule 61    term -> term DIV f_actor
Rule 62    f_actor -> var_name
Rule 63    f_actor -> number
Rule 64    f_actor -> LPAREN expression RPAREN
Rule 65    var_name -> IDENT act_lookup_prev_ident
Rule 66    number -> NUMBER
Rule 67    id_list -> IDENT act_insert_prev_var_ident
Rule 68    id_list -> id_list COMMA IDENT act_insert_prev_var_ident
Rule 69    act_insert_prev_var_ident -> <empty>
Rule 70    act_insert_prev_proc_ident -> <empty>
Rule 71    act_lookup_prev_ident -> <empty>
Rule 72    act_set_varscope_local -> <empty>
Rule 73    act_set_varscope_global -> act_delete_local_ident
Rule 74    act_delete_local_ident -> <empty>

Terminals, with rules where they appear

ASSIGN               : 28 42
BEGIN                : 45
COMMA                : 68
DIV                  : 61
DO                   : 40 42
ELSE                 : 38
END                  : 45
EQ                   : 49
FOR                  : 42
FUNCTION             : 
GE                   : 54
GT                   : 53
IDENT                : 1 15 28 42 44 46 65 67 68
IF                   : 29
INTERVAL             : 
LBRACKET             : 
LE                   : 52
LPAREN               : 46 47 64
LT                   : 51
MINUS                : 56 58
MULT                 : 60
NEQ                  : 50
NUMBER               : 66
PERIOD               : 1
PLUS                 : 57
PROCEDURE            : 14
PROGRAM              : 1
RBRACKET             : 
READ                 : 46
RPAREN               : 46 47 64
SEMICOLON            : 1 4 6 9 11 14 17
THEN                 : 29
TO                   : 42
VAR                  : 8
WHILE                : 40
WRITE                : 47
error                : 

Nonterminals, with rules where they appear

act_delete_local_ident : 73
act_generate_labels  : 29 40
act_insert_br        : 29
act_insert_br_while  : 40
act_insert_jump1     : 40 40
act_insert_jump2     : 
act_insert_jump3     : 29 29
act_insert_label1    : 29 40
act_insert_label2    : 29 40
act_insert_label3    : 29 40
act_insert_prev_proc_ident : 15
act_insert_prev_var_ident : 67 68
act_lookup_prev_ident : 28 42 44 46 65
act_set_varscope_global : 2
act_set_varscope_local : 2
assignment_statement : 19
block_statement      : 25
condition            : 29 40
else_statement       : 29
expression           : 28 42 42 47 49 49 50 50 51 51 52 52 53 53 54 54 57 58 64
f_actor              : 59 60 61
for_statement        : 22
id_list              : 8 68
if_statement         : 20
inblock              : 14
null_statement       : 24
number               : 63
outblock             : 1
outblock_act         : 2
proc_call_name       : 43
proc_call_statement  : 23
proc_decl            : 13
proc_name            : 14
program              : 0
read_statement       : 26
statement            : 2 16 17 18 29 38 40 42
statement_list       : 17 45
subprog_decl         : 11 12
subprog_decl_list    : 9 11
subprog_decl_part    : 2
term                 : 55 56 57 58 60 61
var_decl             : 6 7
var_decl_list        : 4 6
var_decl_part        : 2 16
var_name             : 62
while_statement      : 21
write_statement      : 27

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM IDENT SEMICOLON outblock PERIOD

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . IDENT SEMICOLON outblock PERIOD

    IDENT           shift and go to state 3


state 3

    (1) program -> PROGRAM IDENT . SEMICOLON outblock PERIOD

    SEMICOLON       shift and go to state 4


state 4

    (1) program -> PROGRAM IDENT SEMICOLON . outblock PERIOD
    (2) outblock -> . var_decl_part act_set_varscope_local subprog_decl_part outblock_act act_set_varscope_global statement
    (4) var_decl_part -> . var_decl_list SEMICOLON
    (5) var_decl_part -> .
    (6) var_decl_list -> . var_decl_list SEMICOLON var_decl
    (7) var_decl_list -> . var_decl
    (8) var_decl -> . VAR id_list

    PROCEDURE       reduce using rule 5 (var_decl_part -> .)
    IDENT           reduce using rule 5 (var_decl_part -> .)
    WHILE           reduce using rule 5 (var_decl_part -> .)
    FOR             reduce using rule 5 (var_decl_part -> .)
    BEGIN           reduce using rule 5 (var_decl_part -> .)
    READ            reduce using rule 5 (var_decl_part -> .)
    WRITE           reduce using rule 5 (var_decl_part -> .)
    IF              reduce using rule 5 (var_decl_part -> .)
    PERIOD          reduce using rule 5 (var_decl_part -> .)
    VAR             shift and go to state 9

    outblock                       shift and go to state 5
    var_decl_part                  shift and go to state 6
    var_decl_list                  shift and go to state 7
    var_decl                       shift and go to state 8

state 5

    (1) program -> PROGRAM IDENT SEMICOLON outblock . PERIOD

    PERIOD          shift and go to state 10


state 6

    (2) outblock -> var_decl_part . act_set_varscope_local subprog_decl_part outblock_act act_set_varscope_global statement
    (72) act_set_varscope_local -> .

    PROCEDURE       reduce using rule 72 (act_set_varscope_local -> .)
    IDENT           reduce using rule 72 (act_set_varscope_local -> .)
    WHILE           reduce using rule 72 (act_set_varscope_local -> .)
    FOR             reduce using rule 72 (act_set_varscope_local -> .)
    BEGIN           reduce using rule 72 (act_set_varscope_local -> .)
    READ            reduce using rule 72 (act_set_varscope_local -> .)
    WRITE           reduce using rule 72 (act_set_varscope_local -> .)
    IF              reduce using rule 72 (act_set_varscope_local -> .)
    PERIOD          reduce using rule 72 (act_set_varscope_local -> .)

    act_set_varscope_local         shift and go to state 11

state 7

    (4) var_decl_part -> var_decl_list . SEMICOLON
    (6) var_decl_list -> var_decl_list . SEMICOLON var_decl

    SEMICOLON       shift and go to state 12


state 8

    (7) var_decl_list -> var_decl .

    SEMICOLON       reduce using rule 7 (var_decl_list -> var_decl .)


state 9

    (8) var_decl -> VAR . id_list
    (67) id_list -> . IDENT act_insert_prev_var_ident
    (68) id_list -> . id_list COMMA IDENT act_insert_prev_var_ident

    IDENT           shift and go to state 14

    id_list                        shift and go to state 13

state 10

    (1) program -> PROGRAM IDENT SEMICOLON outblock PERIOD .

    $end            reduce using rule 1 (program -> PROGRAM IDENT SEMICOLON outblock PERIOD .)


state 11

    (2) outblock -> var_decl_part act_set_varscope_local . subprog_decl_part outblock_act act_set_varscope_global statement
    (9) subprog_decl_part -> . subprog_decl_list SEMICOLON
    (10) subprog_decl_part -> .
    (11) subprog_decl_list -> . subprog_decl_list SEMICOLON subprog_decl
    (12) subprog_decl_list -> . subprog_decl
    (13) subprog_decl -> . proc_decl
    (14) proc_decl -> . PROCEDURE proc_name SEMICOLON inblock

    IDENT           reduce using rule 10 (subprog_decl_part -> .)
    WHILE           reduce using rule 10 (subprog_decl_part -> .)
    FOR             reduce using rule 10 (subprog_decl_part -> .)
    BEGIN           reduce using rule 10 (subprog_decl_part -> .)
    READ            reduce using rule 10 (subprog_decl_part -> .)
    WRITE           reduce using rule 10 (subprog_decl_part -> .)
    IF              reduce using rule 10 (subprog_decl_part -> .)
    PERIOD          reduce using rule 10 (subprog_decl_part -> .)
    PROCEDURE       shift and go to state 19

    subprog_decl_part              shift and go to state 15
    subprog_decl_list              shift and go to state 16
    subprog_decl                   shift and go to state 17
    proc_decl                      shift and go to state 18

state 12

    (4) var_decl_part -> var_decl_list SEMICOLON .
    (6) var_decl_list -> var_decl_list SEMICOLON . var_decl
    (8) var_decl -> . VAR id_list

    PROCEDURE       reduce using rule 4 (var_decl_part -> var_decl_list SEMICOLON .)
    IDENT           reduce using rule 4 (var_decl_part -> var_decl_list SEMICOLON .)
    WHILE           reduce using rule 4 (var_decl_part -> var_decl_list SEMICOLON .)
    FOR             reduce using rule 4 (var_decl_part -> var_decl_list SEMICOLON .)
    BEGIN           reduce using rule 4 (var_decl_part -> var_decl_list SEMICOLON .)
    READ            reduce using rule 4 (var_decl_part -> var_decl_list SEMICOLON .)
    WRITE           reduce using rule 4 (var_decl_part -> var_decl_list SEMICOLON .)
    IF              reduce using rule 4 (var_decl_part -> var_decl_list SEMICOLON .)
    PERIOD          reduce using rule 4 (var_decl_part -> var_decl_list SEMICOLON .)
    SEMICOLON       reduce using rule 4 (var_decl_part -> var_decl_list SEMICOLON .)
    VAR             shift and go to state 9

    var_decl                       shift and go to state 20

state 13

    (8) var_decl -> VAR id_list .
    (68) id_list -> id_list . COMMA IDENT act_insert_prev_var_ident

    SEMICOLON       reduce using rule 8 (var_decl -> VAR id_list .)
    COMMA           shift and go to state 21


state 14

    (67) id_list -> IDENT . act_insert_prev_var_ident
    (69) act_insert_prev_var_ident -> .

    COMMA           reduce using rule 69 (act_insert_prev_var_ident -> .)
    SEMICOLON       reduce using rule 69 (act_insert_prev_var_ident -> .)

    act_insert_prev_var_ident      shift and go to state 22

state 15

    (2) outblock -> var_decl_part act_set_varscope_local subprog_decl_part . outblock_act act_set_varscope_global statement
    (3) outblock_act -> .

    IDENT           reduce using rule 3 (outblock_act -> .)
    WHILE           reduce using rule 3 (outblock_act -> .)
    FOR             reduce using rule 3 (outblock_act -> .)
    BEGIN           reduce using rule 3 (outblock_act -> .)
    READ            reduce using rule 3 (outblock_act -> .)
    WRITE           reduce using rule 3 (outblock_act -> .)
    IF              reduce using rule 3 (outblock_act -> .)
    PERIOD          reduce using rule 3 (outblock_act -> .)

    outblock_act                   shift and go to state 23

state 16

    (9) subprog_decl_part -> subprog_decl_list . SEMICOLON
    (11) subprog_decl_list -> subprog_decl_list . SEMICOLON subprog_decl

    SEMICOLON       shift and go to state 24


state 17

    (12) subprog_decl_list -> subprog_decl .

    SEMICOLON       reduce using rule 12 (subprog_decl_list -> subprog_decl .)


state 18

    (13) subprog_decl -> proc_decl .

    SEMICOLON       reduce using rule 13 (subprog_decl -> proc_decl .)


state 19

    (14) proc_decl -> PROCEDURE . proc_name SEMICOLON inblock
    (15) proc_name -> . IDENT act_insert_prev_proc_ident

    IDENT           shift and go to state 26

    proc_name                      shift and go to state 25

state 20

    (6) var_decl_list -> var_decl_list SEMICOLON var_decl .

    SEMICOLON       reduce using rule 6 (var_decl_list -> var_decl_list SEMICOLON var_decl .)


state 21

    (68) id_list -> id_list COMMA . IDENT act_insert_prev_var_ident

    IDENT           shift and go to state 27


state 22

    (67) id_list -> IDENT act_insert_prev_var_ident .

    COMMA           reduce using rule 67 (id_list -> IDENT act_insert_prev_var_ident .)
    SEMICOLON       reduce using rule 67 (id_list -> IDENT act_insert_prev_var_ident .)


state 23

    (2) outblock -> var_decl_part act_set_varscope_local subprog_decl_part outblock_act . act_set_varscope_global statement
    (73) act_set_varscope_global -> . act_delete_local_ident
    (74) act_delete_local_ident -> .

    IDENT           reduce using rule 74 (act_delete_local_ident -> .)
    WHILE           reduce using rule 74 (act_delete_local_ident -> .)
    FOR             reduce using rule 74 (act_delete_local_ident -> .)
    BEGIN           reduce using rule 74 (act_delete_local_ident -> .)
    READ            reduce using rule 74 (act_delete_local_ident -> .)
    WRITE           reduce using rule 74 (act_delete_local_ident -> .)
    IF              reduce using rule 74 (act_delete_local_ident -> .)
    PERIOD          reduce using rule 74 (act_delete_local_ident -> .)

    act_set_varscope_global        shift and go to state 28
    act_delete_local_ident         shift and go to state 29

state 24

    (9) subprog_decl_part -> subprog_decl_list SEMICOLON .
    (11) subprog_decl_list -> subprog_decl_list SEMICOLON . subprog_decl
    (13) subprog_decl -> . proc_decl
    (14) proc_decl -> . PROCEDURE proc_name SEMICOLON inblock

    IDENT           reduce using rule 9 (subprog_decl_part -> subprog_decl_list SEMICOLON .)
    WHILE           reduce using rule 9 (subprog_decl_part -> subprog_decl_list SEMICOLON .)
    FOR             reduce using rule 9 (subprog_decl_part -> subprog_decl_list SEMICOLON .)
    BEGIN           reduce using rule 9 (subprog_decl_part -> subprog_decl_list SEMICOLON .)
    READ            reduce using rule 9 (subprog_decl_part -> subprog_decl_list SEMICOLON .)
    WRITE           reduce using rule 9 (subprog_decl_part -> subprog_decl_list SEMICOLON .)
    IF              reduce using rule 9 (subprog_decl_part -> subprog_decl_list SEMICOLON .)
    PERIOD          reduce using rule 9 (subprog_decl_part -> subprog_decl_list SEMICOLON .)
    PROCEDURE       shift and go to state 19

    subprog_decl                   shift and go to state 30
    proc_decl                      shift and go to state 18

state 25

    (14) proc_decl -> PROCEDURE proc_name . SEMICOLON inblock

    SEMICOLON       shift and go to state 31


state 26

    (15) proc_name -> IDENT . act_insert_prev_proc_ident
    (70) act_insert_prev_proc_ident -> .

    SEMICOLON       reduce using rule 70 (act_insert_prev_proc_ident -> .)

    act_insert_prev_proc_ident     shift and go to state 32

state 27

    (68) id_list -> id_list COMMA IDENT . act_insert_prev_var_ident
    (69) act_insert_prev_var_ident -> .

    COMMA           reduce using rule 69 (act_insert_prev_var_ident -> .)
    SEMICOLON       reduce using rule 69 (act_insert_prev_var_ident -> .)

    act_insert_prev_var_ident      shift and go to state 33

state 28

    (2) outblock -> var_decl_part act_set_varscope_local subprog_decl_part outblock_act act_set_varscope_global . statement
    (19) statement -> . assignment_statement
    (20) statement -> . if_statement
    (21) statement -> . while_statement
    (22) statement -> . for_statement
    (23) statement -> . proc_call_statement
    (24) statement -> . null_statement
    (25) statement -> . block_statement
    (26) statement -> . read_statement
    (27) statement -> . write_statement
    (28) assignment_statement -> . IDENT act_lookup_prev_ident ASSIGN expression
    (29) if_statement -> . act_generate_labels IF condition act_insert_br THEN act_insert_label1 statement act_insert_jump3 act_insert_label2 else_statement act_insert_jump3 act_insert_label3
    (40) while_statement -> . WHILE act_generate_labels act_insert_jump1 act_insert_label1 condition act_insert_br_while DO act_insert_label2 statement act_insert_jump1 act_insert_label3
    (42) for_statement -> . FOR IDENT act_lookup_prev_ident ASSIGN expression TO expression DO statement
    (43) proc_call_statement -> . proc_call_name
    (48) null_statement -> .
    (45) block_statement -> . BEGIN statement_list END
    (46) read_statement -> . READ LPAREN IDENT act_lookup_prev_ident RPAREN
    (47) write_statement -> . WRITE LPAREN expression RPAREN
    (30) act_generate_labels -> .
    (44) proc_call_name -> . IDENT act_lookup_prev_ident

    IDENT           shift and go to state 44
    WHILE           shift and go to state 46
    FOR             shift and go to state 47
    PERIOD          reduce using rule 48 (null_statement -> .)
    BEGIN           shift and go to state 49
    READ            shift and go to state 50
    WRITE           shift and go to state 51
    IF              reduce using rule 30 (act_generate_labels -> .)

    statement                      shift and go to state 34
    assignment_statement           shift and go to state 35
    if_statement                   shift and go to state 36
    while_statement                shift and go to state 37
    for_statement                  shift and go to state 38
    proc_call_statement            shift and go to state 39
    null_statement                 shift and go to state 40
    block_statement                shift and go to state 41
    read_statement                 shift and go to state 42
    write_statement                shift and go to state 43
    act_generate_labels            shift and go to state 45
    proc_call_name                 shift and go to state 48

state 29

    (73) act_set_varscope_global -> act_delete_local_ident .

    IDENT           reduce using rule 73 (act_set_varscope_global -> act_delete_local_ident .)
    WHILE           reduce using rule 73 (act_set_varscope_global -> act_delete_local_ident .)
    FOR             reduce using rule 73 (act_set_varscope_global -> act_delete_local_ident .)
    BEGIN           reduce using rule 73 (act_set_varscope_global -> act_delete_local_ident .)
    READ            reduce using rule 73 (act_set_varscope_global -> act_delete_local_ident .)
    WRITE           reduce using rule 73 (act_set_varscope_global -> act_delete_local_ident .)
    IF              reduce using rule 73 (act_set_varscope_global -> act_delete_local_ident .)
    PERIOD          reduce using rule 73 (act_set_varscope_global -> act_delete_local_ident .)


state 30

    (11) subprog_decl_list -> subprog_decl_list SEMICOLON subprog_decl .

    SEMICOLON       reduce using rule 11 (subprog_decl_list -> subprog_decl_list SEMICOLON subprog_decl .)


state 31

    (14) proc_decl -> PROCEDURE proc_name SEMICOLON . inblock
    (16) inblock -> . var_decl_part statement
    (4) var_decl_part -> . var_decl_list SEMICOLON
    (5) var_decl_part -> .
    (6) var_decl_list -> . var_decl_list SEMICOLON var_decl
    (7) var_decl_list -> . var_decl
    (8) var_decl -> . VAR id_list

    IDENT           reduce using rule 5 (var_decl_part -> .)
    WHILE           reduce using rule 5 (var_decl_part -> .)
    FOR             reduce using rule 5 (var_decl_part -> .)
    BEGIN           reduce using rule 5 (var_decl_part -> .)
    READ            reduce using rule 5 (var_decl_part -> .)
    WRITE           reduce using rule 5 (var_decl_part -> .)
    IF              reduce using rule 5 (var_decl_part -> .)
    SEMICOLON       reduce using rule 5 (var_decl_part -> .)
    VAR             shift and go to state 9

    inblock                        shift and go to state 52
    var_decl_part                  shift and go to state 53
    var_decl_list                  shift and go to state 7
    var_decl                       shift and go to state 8

state 32

    (15) proc_name -> IDENT act_insert_prev_proc_ident .

    SEMICOLON       reduce using rule 15 (proc_name -> IDENT act_insert_prev_proc_ident .)


state 33

    (68) id_list -> id_list COMMA IDENT act_insert_prev_var_ident .

    COMMA           reduce using rule 68 (id_list -> id_list COMMA IDENT act_insert_prev_var_ident .)
    SEMICOLON       reduce using rule 68 (id_list -> id_list COMMA IDENT act_insert_prev_var_ident .)


state 34

    (2) outblock -> var_decl_part act_set_varscope_local subprog_decl_part outblock_act act_set_varscope_global statement .

    PERIOD          reduce using rule 2 (outblock -> var_decl_part act_set_varscope_local subprog_decl_part outblock_act act_set_varscope_global statement .)


state 35

    (19) statement -> assignment_statement .

    PERIOD          reduce using rule 19 (statement -> assignment_statement .)
    END             reduce using rule 19 (statement -> assignment_statement .)
    SEMICOLON       reduce using rule 19 (statement -> assignment_statement .)
    ELSE            reduce using rule 19 (statement -> assignment_statement .)


state 36

    (20) statement -> if_statement .

    PERIOD          reduce using rule 20 (statement -> if_statement .)
    END             reduce using rule 20 (statement -> if_statement .)
    SEMICOLON       reduce using rule 20 (statement -> if_statement .)
    ELSE            reduce using rule 20 (statement -> if_statement .)


state 37

    (21) statement -> while_statement .

    PERIOD          reduce using rule 21 (statement -> while_statement .)
    END             reduce using rule 21 (statement -> while_statement .)
    SEMICOLON       reduce using rule 21 (statement -> while_statement .)
    ELSE            reduce using rule 21 (statement -> while_statement .)


state 38

    (22) statement -> for_statement .

    PERIOD          reduce using rule 22 (statement -> for_statement .)
    END             reduce using rule 22 (statement -> for_statement .)
    SEMICOLON       reduce using rule 22 (statement -> for_statement .)
    ELSE            reduce using rule 22 (statement -> for_statement .)


state 39

    (23) statement -> proc_call_statement .

    PERIOD          reduce using rule 23 (statement -> proc_call_statement .)
    END             reduce using rule 23 (statement -> proc_call_statement .)
    SEMICOLON       reduce using rule 23 (statement -> proc_call_statement .)
    ELSE            reduce using rule 23 (statement -> proc_call_statement .)


state 40

    (24) statement -> null_statement .

    PERIOD          reduce using rule 24 (statement -> null_statement .)
    END             reduce using rule 24 (statement -> null_statement .)
    SEMICOLON       reduce using rule 24 (statement -> null_statement .)
    ELSE            reduce using rule 24 (statement -> null_statement .)


state 41

    (25) statement -> block_statement .

    PERIOD          reduce using rule 25 (statement -> block_statement .)
    END             reduce using rule 25 (statement -> block_statement .)
    SEMICOLON       reduce using rule 25 (statement -> block_statement .)
    ELSE            reduce using rule 25 (statement -> block_statement .)


state 42

    (26) statement -> read_statement .

    PERIOD          reduce using rule 26 (statement -> read_statement .)
    END             reduce using rule 26 (statement -> read_statement .)
    SEMICOLON       reduce using rule 26 (statement -> read_statement .)
    ELSE            reduce using rule 26 (statement -> read_statement .)


state 43

    (27) statement -> write_statement .

    PERIOD          reduce using rule 27 (statement -> write_statement .)
    END             reduce using rule 27 (statement -> write_statement .)
    SEMICOLON       reduce using rule 27 (statement -> write_statement .)
    ELSE            reduce using rule 27 (statement -> write_statement .)


state 44

    (28) assignment_statement -> IDENT . act_lookup_prev_ident ASSIGN expression
    (44) proc_call_name -> IDENT . act_lookup_prev_ident
    (71) act_lookup_prev_ident -> .

    ASSIGN          reduce using rule 71 (act_lookup_prev_ident -> .)
    PERIOD          reduce using rule 71 (act_lookup_prev_ident -> .)
    END             reduce using rule 71 (act_lookup_prev_ident -> .)
    SEMICOLON       reduce using rule 71 (act_lookup_prev_ident -> .)
    ELSE            reduce using rule 71 (act_lookup_prev_ident -> .)

    act_lookup_prev_ident          shift and go to state 54

state 45

    (29) if_statement -> act_generate_labels . IF condition act_insert_br THEN act_insert_label1 statement act_insert_jump3 act_insert_label2 else_statement act_insert_jump3 act_insert_label3

    IF              shift and go to state 55


state 46

    (40) while_statement -> WHILE . act_generate_labels act_insert_jump1 act_insert_label1 condition act_insert_br_while DO act_insert_label2 statement act_insert_jump1 act_insert_label3
    (30) act_generate_labels -> .

    MINUS           reduce using rule 30 (act_generate_labels -> .)
    LPAREN          reduce using rule 30 (act_generate_labels -> .)
    IDENT           reduce using rule 30 (act_generate_labels -> .)
    NUMBER          reduce using rule 30 (act_generate_labels -> .)

    act_generate_labels            shift and go to state 56

state 47

    (42) for_statement -> FOR . IDENT act_lookup_prev_ident ASSIGN expression TO expression DO statement

    IDENT           shift and go to state 57


state 48

    (43) proc_call_statement -> proc_call_name .

    PERIOD          reduce using rule 43 (proc_call_statement -> proc_call_name .)
    END             reduce using rule 43 (proc_call_statement -> proc_call_name .)
    SEMICOLON       reduce using rule 43 (proc_call_statement -> proc_call_name .)
    ELSE            reduce using rule 43 (proc_call_statement -> proc_call_name .)


state 49

    (45) block_statement -> BEGIN . statement_list END
    (17) statement_list -> . statement_list SEMICOLON statement
    (18) statement_list -> . statement
    (19) statement -> . assignment_statement
    (20) statement -> . if_statement
    (21) statement -> . while_statement
    (22) statement -> . for_statement
    (23) statement -> . proc_call_statement
    (24) statement -> . null_statement
    (25) statement -> . block_statement
    (26) statement -> . read_statement
    (27) statement -> . write_statement
    (28) assignment_statement -> . IDENT act_lookup_prev_ident ASSIGN expression
    (29) if_statement -> . act_generate_labels IF condition act_insert_br THEN act_insert_label1 statement act_insert_jump3 act_insert_label2 else_statement act_insert_jump3 act_insert_label3
    (40) while_statement -> . WHILE act_generate_labels act_insert_jump1 act_insert_label1 condition act_insert_br_while DO act_insert_label2 statement act_insert_jump1 act_insert_label3
    (42) for_statement -> . FOR IDENT act_lookup_prev_ident ASSIGN expression TO expression DO statement
    (43) proc_call_statement -> . proc_call_name
    (48) null_statement -> .
    (45) block_statement -> . BEGIN statement_list END
    (46) read_statement -> . READ LPAREN IDENT act_lookup_prev_ident RPAREN
    (47) write_statement -> . WRITE LPAREN expression RPAREN
    (30) act_generate_labels -> .
    (44) proc_call_name -> . IDENT act_lookup_prev_ident

    IDENT           shift and go to state 44
    WHILE           shift and go to state 46
    FOR             shift and go to state 47
    END             reduce using rule 48 (null_statement -> .)
    SEMICOLON       reduce using rule 48 (null_statement -> .)
    BEGIN           shift and go to state 49
    READ            shift and go to state 50
    WRITE           shift and go to state 51
    IF              reduce using rule 30 (act_generate_labels -> .)

    statement_list                 shift and go to state 58
    statement                      shift and go to state 59
    assignment_statement           shift and go to state 35
    if_statement                   shift and go to state 36
    while_statement                shift and go to state 37
    for_statement                  shift and go to state 38
    proc_call_statement            shift and go to state 39
    null_statement                 shift and go to state 40
    block_statement                shift and go to state 41
    read_statement                 shift and go to state 42
    write_statement                shift and go to state 43
    act_generate_labels            shift and go to state 45
    proc_call_name                 shift and go to state 48

state 50

    (46) read_statement -> READ . LPAREN IDENT act_lookup_prev_ident RPAREN

    LPAREN          shift and go to state 60


state 51

    (47) write_statement -> WRITE . LPAREN expression RPAREN

    LPAREN          shift and go to state 61


state 52

    (14) proc_decl -> PROCEDURE proc_name SEMICOLON inblock .

    SEMICOLON       reduce using rule 14 (proc_decl -> PROCEDURE proc_name SEMICOLON inblock .)


state 53

    (16) inblock -> var_decl_part . statement
    (19) statement -> . assignment_statement
    (20) statement -> . if_statement
    (21) statement -> . while_statement
    (22) statement -> . for_statement
    (23) statement -> . proc_call_statement
    (24) statement -> . null_statement
    (25) statement -> . block_statement
    (26) statement -> . read_statement
    (27) statement -> . write_statement
    (28) assignment_statement -> . IDENT act_lookup_prev_ident ASSIGN expression
    (29) if_statement -> . act_generate_labels IF condition act_insert_br THEN act_insert_label1 statement act_insert_jump3 act_insert_label2 else_statement act_insert_jump3 act_insert_label3
    (40) while_statement -> . WHILE act_generate_labels act_insert_jump1 act_insert_label1 condition act_insert_br_while DO act_insert_label2 statement act_insert_jump1 act_insert_label3
    (42) for_statement -> . FOR IDENT act_lookup_prev_ident ASSIGN expression TO expression DO statement
    (43) proc_call_statement -> . proc_call_name
    (48) null_statement -> .
    (45) block_statement -> . BEGIN statement_list END
    (46) read_statement -> . READ LPAREN IDENT act_lookup_prev_ident RPAREN
    (47) write_statement -> . WRITE LPAREN expression RPAREN
    (30) act_generate_labels -> .
    (44) proc_call_name -> . IDENT act_lookup_prev_ident

    IDENT           shift and go to state 44
    WHILE           shift and go to state 46
    FOR             shift and go to state 47
    SEMICOLON       reduce using rule 48 (null_statement -> .)
    BEGIN           shift and go to state 49
    READ            shift and go to state 50
    WRITE           shift and go to state 51
    IF              reduce using rule 30 (act_generate_labels -> .)

    statement                      shift and go to state 62
    assignment_statement           shift and go to state 35
    if_statement                   shift and go to state 36
    while_statement                shift and go to state 37
    for_statement                  shift and go to state 38
    proc_call_statement            shift and go to state 39
    null_statement                 shift and go to state 40
    block_statement                shift and go to state 41
    read_statement                 shift and go to state 42
    write_statement                shift and go to state 43
    act_generate_labels            shift and go to state 45
    proc_call_name                 shift and go to state 48

state 54

    (28) assignment_statement -> IDENT act_lookup_prev_ident . ASSIGN expression
    (44) proc_call_name -> IDENT act_lookup_prev_ident .

    ASSIGN          shift and go to state 63
    PERIOD          reduce using rule 44 (proc_call_name -> IDENT act_lookup_prev_ident .)
    END             reduce using rule 44 (proc_call_name -> IDENT act_lookup_prev_ident .)
    SEMICOLON       reduce using rule 44 (proc_call_name -> IDENT act_lookup_prev_ident .)
    ELSE            reduce using rule 44 (proc_call_name -> IDENT act_lookup_prev_ident .)


state 55

    (29) if_statement -> act_generate_labels IF . condition act_insert_br THEN act_insert_label1 statement act_insert_jump3 act_insert_label2 else_statement act_insert_jump3 act_insert_label3
    (49) condition -> . expression EQ expression
    (50) condition -> . expression NEQ expression
    (51) condition -> . expression LT expression
    (52) condition -> . expression LE expression
    (53) condition -> . expression GT expression
    (54) condition -> . expression GE expression
    (55) expression -> . term
    (56) expression -> . MINUS term
    (57) expression -> . expression PLUS term
    (58) expression -> . expression MINUS term
    (59) term -> . f_actor
    (60) term -> . term MULT f_actor
    (61) term -> . term DIV f_actor
    (62) f_actor -> . var_name
    (63) f_actor -> . number
    (64) f_actor -> . LPAREN expression RPAREN
    (65) var_name -> . IDENT act_lookup_prev_ident
    (66) number -> . NUMBER

    MINUS           shift and go to state 67
    LPAREN          shift and go to state 71
    IDENT           shift and go to state 72
    NUMBER          shift and go to state 73

    condition                      shift and go to state 64
    expression                     shift and go to state 65
    term                           shift and go to state 66
    f_actor                        shift and go to state 68
    var_name                       shift and go to state 69
    number                         shift and go to state 70

state 56

    (40) while_statement -> WHILE act_generate_labels . act_insert_jump1 act_insert_label1 condition act_insert_br_while DO act_insert_label2 statement act_insert_jump1 act_insert_label3
    (35) act_insert_jump1 -> .

    MINUS           reduce using rule 35 (act_insert_jump1 -> .)
    LPAREN          reduce using rule 35 (act_insert_jump1 -> .)
    IDENT           reduce using rule 35 (act_insert_jump1 -> .)
    NUMBER          reduce using rule 35 (act_insert_jump1 -> .)
